# test-rust-2

./: Cargo.toml
src/: main.rs
src/lib/: lib.rs
